gst/isomp4/gstqtmux.c
@@ -3045,6 +3045,12 @@ gst_qt_mux_add_buffer (GstQTMux * qtmux, GstQTPad * pad, GstBuffer * buf)
       pad->first_ts = GST_BUFFER_DTS (last_buf);
     }
 
+    if (GST_BUFFER_DTS_IS_VALID (last_buf)) {
+      pad->last_dts = GST_BUFFER_DTS (last_buf);
+    } else if (GST_BUFFER_PTS_IS_VALID (last_buf)) {
+      pad->last_dts = GST_BUFFER_PTS (last_buf);
+    }
+
     if (GST_CLOCK_TIME_IS_VALID (pad->first_ts)) {
       GST_DEBUG ("setting first_ts to %" G_GUINT64_FORMAT, pad->first_ts);
     } else {
